// Flyweight Interface
export interface Flyweight {
    operation(extrinsicState: any): void;
}